Fixed bug of SVG not showing. Provided a sample

--- a/page/style.css
+++ b/page/style.css
@@ -30,5 +30,6 @@ body {
 }
 
 svg {
-  display: none;
+  width: 0;
+  height: 0;
 }
